[project]
name = "retest"
version = "0.1.0"
description = "Python testing for humans"
readme = "README.md"
authors = [
    { name = "Anders Poirel", email = "contact@anderspoirel.net"}
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
retest = "retest:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
