[project]
name = "retest"
version = "0.1.0"
description = "Testing simplified"
readme = "README.md"
authors = [
    { name = "Anders Poirel", email = "contact@anderspoirel.net"}
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
retest = "retest:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "ruff==0.9.10",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
